<?xml version="1.0"?>
<package>
  <name>victoria_bag_recorder</name>
  <version>0.0.0</version>
  <description>The victoria_bag_recorder package</description>

  <maintainer email="jrcapriles@gmail.com">Jose Capriles</maintainer>
  <author email="jrcapriles@gmail.com">Jose Capriles</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>rosbag</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
